test/runtime/fail/import/already_imported.hy

// expect error: Package named `io` already imported

import "io"

let a = 3
import "io"
